--- a/html/nearby.html
+++ b/html/nearby.html
@@ -22,7 +22,7 @@
             margin: 0;
             padding: 0;
         }
-        #container {width: 100%; height: 500px;
+        #container {width: 100%; height: 100%;
             margin:0;padding: 0 }
     </style>
 </head>
@@ -30,12 +30,72 @@
       <!--5b090b8568770d074eb12c5de38da38e-->
       <div id="container"></div>
     <script>
+
         var map = new AMap.Map('container', {
             zoom:15//级别
         });
-        var toolbar = new AMap.ToolBar();
-        var gl = new AMap.Geolocation();
-        map.plugin(toolbar);
+
+        function onComplete(result) {
+//            alert(JSON.stringify(result.addressComponent))
+            console.log(result);
+            map.clearMap();
+            doSearch(result);
+        }
+
+        function onError() {
+            alert("定位失败，请开启定位服务重试！");
+        }
+
+
+        AMap.plugin('AMap.ToolBar',function(){//异步加载插件
+            var toolbar = new AMap.ToolBar();
+            map.addControl(toolbar);
+        });
+        AMap.plugin('AMap.Geolocation',function () {
+            var gel = new AMap.Geolocation({
+                enableHighAccuracy: true,//是否使用高精度定位，默认:true
+                timeout: 10000,          //超过10秒后停止定位，默认：无穷大
+                maximumAge: 0,           //定位结果缓存0毫秒，默认：0
+                convert: true,           //自动偏移坐标，偏移后的坐标为高德坐标，默认：true
+                showButton: true,        //显示定位按钮，默认：true
+                buttonPosition: 'LB',    //定位按钮停靠位置，默认：'LB'，左下角
+                buttonOffset: new AMap.Pixel(10, 20),//定位按钮与设置的停靠位置的偏移量，默认：Pixel(10, 20)
+                showMarker: true,        //定位成功后在定位到的位置显示点标记，默认：true
+                showCircle: true,        //定位成功后用圆圈表示定位精度范围，默认：true
+                panToLocation: true,     //定位成功后将定位到的位置作为地图中心点，默认：true
+                zoomToAccuracy:true      //定位成功后调整地图视野范围使定位位置及精度范围视野内可见，默认：false
+            });
+            map.addControl(gel);
+            AMap.event.addListener(gel, 'complete', onComplete);//返回定位信息
+            AMap.event.addListener(gel, 'error', onError);      //返回定位出错信息
+        });
+        AMap.plugin('AMap.Scale',function () {
+            var scale = new AMap.Scale({position:'LT'});
+            map.addControl(scale);
+        });
+
+        function doSearch(result) {
+            if(result.info === "SUCCESS" && result.type==="complete"){
+
+                AMap.service(["AMap.PlaceSearch"], function() {
+                    var placeSearch = new AMap.PlaceSearch({ //构造地点查询类
+                        pageSize: 5,
+                        pageIndex: 1,
+                        map: map
+                    });
+                    placeSearch.searchNearBy("卫生间",result.position,2000,function (status,data) {
+                        console.log(data);
+                        if (data.info === "OK" && status==="complete"){
+                            var pois = data.poiList.pois;
+                        }else{
+
+                        }
+                    });
+                });
+            }else{
+                alert("地图服务出错，请稍候再试！");
+            }
+        }
     </script>
 </body>
 </html>
